Finish core material

--- a/03-packages/package-development.Rmd
+++ b/03-packages/package-development.Rmd
@@ -217,6 +217,15 @@ use_roxygen_md()
 
   - lets you use a markdown-like syntax
 
+----
+
+```r
+document()
+load_all()
+check()
+```
+- commit, pull, push
+
 ]
 
 .teach-right[ 
@@ -244,6 +253,145 @@ knitr::include_graphics("workspace/img-nouns/develop.png")
 
 ---
 
+## Develop (your turn)
+
+.teach-left[
+```r
+use_r("fbind")
+```
+
+I like the idea of "document-driven" development:
+
+ - claim what the function will do, then do it
+
+ - if your explanation is getting heavy, split into more functions
+  
+```r
+#' Concatenate factors, including levels
+#'
+#' @param a `factor`
+#' @param b `factor`
+#'
+#' @return `factor`, concatenation of `a` and `b`
+#' 
+#' @export
+#'
+fbind <- function(a, b) {
+}
+```
+]
+
+.teach-right[ 
+```{r noun-develop-2, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/develop.png")
+```
+]
+
+---
+
+## Develop (your turn)
+
+.teach-left[
+
+```r
+#' Concatenate factors, including levels
+#'
+#' Concatenates two factors with two differerent sets of levels, returning
+#' a factor with levels that are the union of the input factors' levels.
+#
+#' @param a `factor`
+#' @param b `factor`
+#'
+#' @return `factor`, concatenation of `a` and `b`
+#' @examples
+#'   fbind(iris$Species, Puromycin$state)
+#' @export
+#'
+fbind <- function(a, b) {
+  forcats::fct_c(a, b)
+}
+```
+]
+
+.teach-right[ 
+```{r noun-develop-3, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/develop.png")
+```
+]
+
+---
+
+## Develop (your turn)
+
+.teach-left[
+
+Making a pull-request into someone else's project, write code using their style.
+
+- look for `CONTRIBUTING.md` 
+
+```r
+forcats::fct_c(a, b)
+```
+
+`r emo::ji("point_up")` Use this notation to be explicit about where R looks for the function `fct_c()`.
+
+----
+
+```r
+document()
+load_all()
+check()
+```
+
+What happened?
+
+]
+
+.teach-right[ 
+```{r noun-develop-4, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/develop.png")
+```
+]
+---
+
+## Develop (your turn)
+
+.teach-left[
+
+```r
+use_package("forcats")
+```
+
+We need to specify that *our* package will use the **forcats** package:
+
+- we can indicate a stronger reliance using `Imports` (we do this)
+
+- we can indicate a weaker reliance using `Suggests` (addional test)
+
+Dependency management is a long-debated topic in the R community:
+
+- for now, if you need to rely on a package, do it
+
+----
+
+```r
+document()
+load_all()
+check()
+```
+
+- commit, pull, push
+
+]
+
+.teach-right[ 
+```{r noun-develop-5, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/develop.png")
+```
+]
+
+---
+
 ## Test
 
 .teach-left[
@@ -255,6 +403,95 @@ knitr::include_graphics("workspace/img-verbs/test.png")
 
 .teach-right[ 
 ```{r noun-test, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/test.png")
+```
+]
+
+---
+## Test (your turn)
+
+.teach-left[
+
+```r
+use_testthat()
+```
+
+You need to run this only once; it sets up the testing infrastructure.
+
+We do this to:
+
+- make sure that our functions behave as we expect
+
+- make sure that our functions **continue** to behave as we expect.
+
+]
+
+
+.teach-right[ 
+```{r noun-test-2, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/test.png")
+```
+]
+
+---
+
+## Test (your turn)
+
+.teach-left[
+
+```r
+use_test("fbind")
+```
+
+Edit `test-fbind.R` with something like:
+
+```r
+context("Binding factors")
+
+test_that("fbind() binds factors", {
+
+  x <- factor(c("a", "b"))
+  y <- factor(c("c", "d"))
+  z <- factor(c("a", "b", "c", "d"))
+
+  expect_identical(fbind(x, y), z)
+})
+```
+
+Save `test-fbind.R`.
+
+```r
+test()
+```
+
+]
+
+
+.teach-right[ 
+```{r noun-test-3, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/test.png")
+```
+]
+
+---
+
+## Test (your turn)
+
+.teach-left[
+
+```r
+document()
+load_all()
+check()
+```
+
+- commit, pull, push
+
+]
+
+
+.teach-right[ 
+```{r noun-test-4, echo=FALSE, fig.align='right'}
 knitr::include_graphics("workspace/img-nouns/test.png")
 ```
 ]
@@ -278,6 +515,117 @@ knitr::include_graphics("workspace/img-nouns/document.png")
 
 ---
 
+## Document (your turn)
+
+.teach-left[
+
+```r
+use_readme_rmd()
+```
+
+Helps people learn why they might be interested to use *your* package.
+
+The function produces a template for you to edit:
+
+  - adapt it to `foofactors`
+  - "knit" to create `README.md`
+
+Note, you will have to replace the CRAN stuff with:
+
+```r
+devtools::install_github("<username>/foofactors")
+```
+
+---
+
+```r
+document()
+load_all()
+check()
+```
+
+- commit, pull, push
+
+]
+
+
+.teach-right[ 
+```{r noun-document-2, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/document.png")
+```
+]
+
+
+---
+
+## Document (your turn)
+
+.teach-left[
+
+```r
+use_pkgdown()
+```
+
+- use to build a website that documents your entire package
+
+- great because it forces *you* to confront your documentation
+
+- creates and opens `_pkgdown.yml`; to customize with [bootswatch](https://gallery.shinyapps.io/117-shinythemes/) theme, add:
+
+```yaml
+template:
+  params:
+    bootswatch: cerulean # or choose another
+```
+
+---
+
+```r
+build_site()
+```
+
+- commit, pull, push
+
+]
+
+
+.teach-right[ 
+```{r noun-document-3, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/document.png")
+```
+]
+
+
+---
+
+## Document (your turn)
+
+.teach-left[
+
+To deploy your website using GitHub pages:
+
+- go to the web-page for your GitHub repository
+
+- `r emo::ji("gear")` **Settings** > **GitHub Pages** > **Source**:
+
+- set to **master branch /docs folder** 
+
+----
+
+There's a lot more information at the [pkgdown web-site](https://pkgdown.r-lib.org/index.html).
+
+]
+
+
+.teach-right[ 
+```{r noun-document-4, echo=FALSE, fig.align='right'}
+knitr::include_graphics("workspace/img-nouns/document.png")
+```
+]
+
+
+---
+
 ## Summary
 
 .teach-left[
@@ -291,3 +639,30 @@ knitr::include_graphics("workspace/img-verbs/all.png")
 knitr::include_graphics("workspace/img-nouns/all.png")
 ```
 ]
+
+---
+
+
+### Random stuff (in case we have time)
+
+- How to I do "x"?
+
+  - What does [Tidyverse](https://github.com/tidyverse) do? 
+  - Just look through the code.
+
+- Guides:
+
+  - [Tidyverse style guide](https://style.tidyverse.org/)
+  
+  - [ROpenSci development guide](https://ropensci.github.io/dev_guide/)
+
+- Philosophy:
+
+ - [Tidyverse principles](https://principles.tidyverse.org)
+ 
+ - Ian's [favorite issue](https://github.com/r-lib/httr2/issues/1)
+ 
+- Roxygen life-savers
+
+  - `@inheritParams my_fun`
+  - `@inherit my_fun return`
