Add motivation, references, and polish.

--- a/03-packages/package-development.Rmd
+++ b/03-packages/package-development.Rmd
@@ -17,12 +17,58 @@ output:
 options(htmltools.dir.version = FALSE)
 ```
 
+```{r hello, echo=FALSE, out.width='75%', fig.align='center'}
+knitr::include_graphics("workspace/img-misc/ian.png")
+```
+
+---
+
+## Motivation
+
+In the R world, versions of this are attributed to Hadley Wickham:
+
+> Any time you copy-and-paste code three times, write a function. 
+>
+> Any time you copy-and-paste a function three times, write a package.
+
+--
+
+Also known as the [rule of three](https://en.wikipedia.org/wiki/Rule_of_three_(computer_programming):
+
+ - popularized by Martin Fowler (1999), attributed to Don Roberts
+ 
+--
+
+Packages are the means for sharing code:
+
+  - CRAN
+
+  - GitHub
+
+---
+
+## References and Resources
+
+- R Packages book, Hadley Wickham
+  - [first edition](http://r-pkgs.had.co.nz/)
+  - [second edition](https://r-pkgs.org/) (dev), with Jenny Bryan
+  
+- [usethis](https://usethis.r-lib.org/) package, Jenny Bryan and Hadley Wickham
+
+- [Packages](https://github.com/hfrick/presentations/blob/master/2019-03-12_package_building/2019-03-12_package_building.pdf), Hannah Frick
+  
+- [goodPractice](https://github.com/hfrick/presentations/blob/master/2018-06-27_goodpractice/2018-06-27_goodpractice.pdf), Hannah Frick
+
+---
+
 ## Overview
 
 .teach-left[
 ```{r verb-base, echo=FALSE, fig.align='left'}
 knitr::include_graphics("workspace/img-verbs/base.png")
 ```
+
+.footnote[Figure adapted from [Packages](https://github.com/hfrick/presentations/blob/master/2019-03-12_package_building/2019-03-12_package_building.pdf), by Hannah Frick]
 ]
 
 --
@@ -41,6 +87,8 @@ knitr::include_graphics("workspace/img-nouns/prelim.png")
 ```{r verb-base-2, echo=FALSE, fig.align='left'}
 knitr::include_graphics("workspace/img-verbs/base.png")
 ```
+
+.footnote[Figure adapted from [Packages](https://github.com/hfrick/presentations/blob/master/2019-03-12_package_building/2019-03-12_package_building.pdf), by Hannah Frick]
 ]
 
 
@@ -325,15 +373,17 @@ knitr::include_graphics("workspace/img-nouns/develop.png")
 
 .teach-left[
 
-Making a pull-request into someone else's project, write code using their style.
-
-- look for `CONTRIBUTING.md` 
-
 ```r
 forcats::fct_c(a, b)
 ```
 
 `r emo::ji("point_up")` Use this notation to be explicit about where R looks for the function `fct_c()`.
+
+----
+
+Making a pull-request into someone else's project, write code using their style.
+
+- look for `CONTRIBUTING.md` 
 
 ----
 
@@ -366,7 +416,7 @@ We need to specify that *our* package will use the **forcats** package:
 
 - we can indicate a stronger reliance using `Imports` (we do this)
 
-- we can indicate a weaker reliance using `Suggests` (addional test)
+- we can indicate a weaker reliance using `Suggests` (additional test)
 
 Dependency management is a long-debated topic in the R community:
 
@@ -647,8 +697,9 @@ knitr::include_graphics("workspace/img-nouns/all.png")
 
 - How to I do "x"?
 
+  - [RStudio community](https://community.rstudio.com/) is very welcoming.
   - What does [Tidyverse](https://github.com/tidyverse) do? 
-  - Just look through the code.
+    - Just look through the code.
 
 - Guides:
 
